--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Tic Tac toe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script--> 
 </head>
 <body>
-    <h1>Tic Tac Toe implementation using React</h1>
+    <div id="errors" 
+         style="
+            background: #c00;
+            color: #fff;
+            display: none;
+            margin: -20px -20px 20px;
+            padding: 20px;
+            white-space: pre-wrap;
+            ">
+    </div>
     <div id="app"></div>
     <script src="/bundle.js"></script> 
 </body>
